--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-horsestrap",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A generator for Yeoman",
   "keywords": [
     "yeoman-generator"
@@ -21,10 +21,11 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.14.0",
-    "simple-git": "~0.5.0",
+    "ncp": "~0.5.0",
     "rimraf": "~2.2.6",
-    "ncp": "~0.5.0"
+    "simple-git": "~0.5.0",
+    "yeoman-generator": "~0.14.0",
+    "yosay": "^1.0.5"
   },
   "devDependencies": {
     "mocha": "~1.14.0"
